# aws-lambda-local-with-actions

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
example/: .gitignore  Dockerfile  docker-compose.yml  event.json  pyproject.toml
example/.github/workflows/: lambda.yml
example/data/: example_data.csv
example/scripts/: bucket.sh  lambda.sh
example/src/: lambda_function.py
example/src/storage/: __init__.py
example/tests/: test_example.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: lambda.yml
{{cookiecutter.project_name}}/scripts/: lambda.sh
{{cookiecutter.project_name}}/src/: lambda_function.py
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_name}}.py
