[tool.poetry]
authors = ["rokoatcoffee"]
description = "Lambda, S3 example project."
name = "example"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.3"
pytest = "^6.0.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
